--- a/KetchUPClient/app/build.gradle
+++ b/KetchUPClient/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.ketchup'
+    namespace 'com.ketchup.app'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.ketchup"
+        applicationId "com.ketchup.app"
         minSdk 28
         targetSdk 32
         versionCode 1
