--- a/KetchUPClient/app/src/main/AndroidManifest.xml
+++ b/KetchUPClient/app/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_logo_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KetchUp"
+        android:theme="@style/splashScreenTheme"
         tools:targetApi="31" >
         <activity
             android:name=".RegisterScreen"
