--- a/KetchUPClient/app/build.gradle
+++ b/KetchUPClient/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
 }
