Added settings screen, activity and improved dark mode on overall UI

--- a/KetchUPClient/app/src/main/AndroidManifest.xml
+++ b/KetchUPClient/app/src/main/AndroidManifest.xml
@@ -38,6 +38,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".SettingScreen"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".LoginScreen"
             android:exported="true">
             <intent-filter>
