--- a/KetchUPClient/app/build.gradle
+++ b/KetchUPClient/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
