--- a/MustardServer/requirements.txt
+++ b/MustardServer/requirements.txt
@@ -1,25 +1,33 @@
 asgiref==3.5.2
+async-timeout==4.0.2
 attrs==22.1.0
 autobahn==22.7.1
 Automat==20.2.0
 cffi==1.15.1
 channels==4.0.0
+channels-redis==4.0.0
 constantly==15.1.0
 cryptography==38.0.1
 daphne==4.0.0
+Deprecated==1.2.13
 Django==4.1.2
 django-sslserver==0.22
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
+msgpack==1.0.4
+packaging==21.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==22.1.0
+pyparsing==3.0.9
+redis==4.3.4
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.3
 Twisted==22.8.0
 txaio==22.2.1
 typing_extensions==4.4.0
+wrapt==1.14.1
 zope.interface==5.5.0
