--- a/KetchUPClient/app/build.gradle
+++ b/KetchUPClient/app/build.gradle
@@ -34,10 +34,14 @@ android {
 
 dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    // Dependency to resolver issues with okhttp3
+    implementation ('com.google.firebase:firebase-messaging:23.1.0'){
+        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
+    }
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
