Created new manager activity that selects main activity

--- a/KetchUPClient/app/src/main/AndroidManifest.xml
+++ b/KetchUPClient/app/src/main/AndroidManifest.xml
@@ -54,6 +54,13 @@
         </activity>
         <activity
             android:name=".LoginScreen"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ActivityManager"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
