--- a/KetchUPClient/app/build.gradle
+++ b/KetchUPClient/app/build.gradle
@@ -42,11 +42,8 @@ dependencies {
 
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    // Dependency to resolver issues with okhttp3
-    implementation ('com.google.firebase:firebase-messaging:23.1.0'){
-        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
-    }
+
+    implementation 'com.neovisionaries:nv-websocket-client:2.14'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
